[gd_scene load_steps=7 format=3 uid="uid://6rbvvyq7afbr"]

[ext_resource type="Script" uid="uid://bpboihbbqd1bv" path="res://Scenes/win_screen/win_screen.gd" id="1_srglc"]
[ext_resource type="AudioStream" uid="uid://cyt5v3tg2yt1h" path="res://art/(Loop) Powerful Relic Theme.wav" id="2_uuijm"]
[ext_resource type="Texture2D" uid="uid://pnaprcf4ostx" path="res://art/1bit/background/abVMxUSc.png" id="3_rujfh"]
[ext_resource type="Texture2D" uid="uid://btvk06rfbncc" path="res://art/1bit/orcoArt/Testeo character1 001.png" id="4_8ihud"]
[ext_resource type="FontFile" uid="uid://c3ns0nhty0opb" path="res://art/alagard.ttf" id="5_jvnp4"]

[sub_resource type="LabelSettings" id="LabelSettings_gbo2t"]
line_spacing = 5.0
font = ExtResource("5_jvnp4")
font_color = Color(0.176471, 1, 1, 1)
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_size = 10
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(3, 1)

[node name="WinScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_srglc")
music = ExtResource("2_uuijm")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_rujfh")
expand_mode = 1

[node name="CharacterPortrait" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = -69.0
offset_right = 69.0
offset_bottom = -9.0
grow_vertical = 0
texture = ExtResource("4_8ihud")
expand_mode = 1
stretch_mode = 5

[node name="VboxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -83.0
offset_top = -50.0
offset_right = 83.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Message" type="Label" parent="VboxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Youâ€™ve slain the odds
rest in peace, champ!"
label_settings = SubResource("LabelSettings_gbo2t")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="VboxContainer"]
custom_minimum_size = Vector2(100, 14)
layout_mode = 2
size_flags_horizontal = 4
text = "Back To Main Menu"

[connection signal="pressed" from="VboxContainer/StartButton" to="." method="_on_start_button_pressed"]
